[project]
name = "db-process"
version = "0.1.0"
description = "Python interface to DesignBuilder command line processing."
authors = [
    { name = "Bartlomiej Tokarzewski", email = "bartlomiej.tokarzewski@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://github.com/tokarzewski/db-process"
"Bug Tracker" = "https://github.com/tokarzewski/db-process/issues"

[project.scripts]
db-process = "db_process.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["db_process"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 96
